vlib/v/checker/tests/undefined_ident_in_ref_selector.vv
module main

fn main() {}

fn read() int {
	return &line.len
}
